refactor(crust): Refactoring supports token generation for api services with `@EnableCrustApi` which uses the same access api with `CrustContext`.
[particle]: Fixed particle filter register twice.